# scobc-sp

./: .gitignore  CMakeLists.txt  Kconfig  README.md  prj.conf  west.yml
.github/workflows/: build.yaml
boards/: scobc_v1_miv.overlay
drivers/i2c/: CMakeLists.txt  Kconfig  Kconfig.sc  i2c_sc.c
dts/bindings/i2c/: sc,i2c.yaml
dts/bindings/misc/: sc,mppc.yaml  sc,spi-target.yaml  sc,system.yaml
src/: ipc.c  ipc.h  main.c  mppc.c  mppc.h  sensor.c  sensor.h  system.c  system.h  version.h
